[package]
name = "ddboline-scripts-rs"
version = "0.1.28"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"

[package.metadata.deb]
name = "ddboline-scripts-rs"
priority = "optional"
section = "rust"
provides = "ddboline-scripts-rs"
extended-description = """Utility Scripts"""

[dependencies]
anyhow = "1.0"
checksums = "0.9"
clap = {version="4.5", features=["derive"]}
dirs = "6.0"
dotenvy = "0.15"
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
envy = "0.4"
log = "0.4"
rand = "0.9"
serde = "1.0"
smallvec = "1.15"
stack-string = { version="1.1", features=["postgres_types"] }
stdout-channel = "0.6"
tokio = {version="1.47", features=["rt", "macros", "rt-multi-thread", "fs", "io-util", "process", "time"]}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}

[[bin]]
name = "system-stats"
path = "src/system_stats.rs"
doc = false

[[bin]]
name = "authenticate-rs"
path = "src/authenticate.rs"
doc = false

[[bin]]
name = "update-repos-rs"
path = "src/update_repos.rs"
doc = false

[[bin]]
name = "check-repos-rs"
path = "src/check_repos.rs"
doc = false

[[bin]]
name = "clean-repos-rs"
path = "src/clean_repos.rs"
doc = false

[[bin]]
name = "setup-repos-rs"
path = "src/setup_repos.rs"
doc = false

[[bin]]
name = "list-running-services-rs"
path = "src/list_running_services.rs"
doc = false

[[bin]]
name = "restart-auth-server-rs"
path = "src/restart_auth_server.rs"
doc = false

[[bin]]
name = "show-password-rs"
path = "src/show_password.rs"
doc = false
